[gd_scene load_steps=16 format=3 uid="uid://vtqju0rl1wah"]

[ext_resource type="Script" path="res://GUI/DialogSystem/Scripts/dialog_system.gd" id="1_adr34"]
[ext_resource type="Texture2D" uid="uid://ccm7sdo8d52xy" path="res://GUI/DialogSystem/Sprites/text-bubble.png" id="2_uvay6"]
[ext_resource type="FontFile" uid="uid://m1bvhii0wgvw" path="res://GUI/Fonts/Abaddon Light.ttf" id="3_i0d6r"]
[ext_resource type="FontFile" uid="uid://bosmvnjuypbw2" path="res://GUI/Fonts/Abaddon Bold.ttf" id="4_wsdh6"]
[ext_resource type="Texture2D" uid="uid://cbjnt02b5xojv" path="res://NPC/Sprites/portraits/npc_portrait_01.png" id="5_3fxeo"]
[ext_resource type="FontFile" uid="uid://cbqiwtjphyc6l" path="res://GUI/Fonts/m5x7.ttf" id="6_1emyi"]
[ext_resource type="AudioStream" uid="uid://cmifpo8etidcp" path="res://GUI/DialogSystem/Audio/voice_blip.wav" id="6_75tmu"]
[ext_resource type="Script" path="res://GUI/DialogSystem/Scripts/portrait_sprite.gd" id="6_ecukd"]

[sub_resource type="Gradient" id="Gradient_kqj55"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_0s23l"]
gradient = SubResource("Gradient_kqj55")
fill_from = Vector2(0, 1)
fill_to = Vector2(0, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8wqli"]
content_margin_left = 14.0
content_margin_top = 10.0
content_margin_right = 14.0
content_margin_bottom = 10.0
texture = ExtResource("2_uvay6")
texture_margin_left = 16.0
texture_margin_top = 16.0
texture_margin_right = 16.0
texture_margin_bottom = 16.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ognxr"]
content_margin_left = 4.0
content_margin_top = 0.0
content_margin_right = 2.0
content_margin_bottom = 1.0
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="Animation" id="Animation_6lynq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_a8meb"]
resource_name = "default"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1.2, 1.4, 1.4, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fsfsl"]
_data = {
"RESET": SubResource("Animation_6lynq"),
"default": SubResource("Animation_a8meb")
}

[node name="DialogSystem" type="CanvasLayer"]
process_mode = 3
layer = 0
script = ExtResource("1_adr34")

[node name="DialogUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="DialogUI"]
modulate = Color(0, 0, 0, 0.717647)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -139.0
grow_horizontal = 2
grow_vertical = 0
texture = SubResource("GradientTexture2D_0s23l")

[node name="PanelContainer" type="PanelContainer" parent="DialogUI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -383.0
offset_top = -96.0
offset_right = -7.0
offset_bottom = -9.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_8wqli")

[node name="RichTextLabel" type="RichTextLabel" parent="DialogUI/PanelContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0.439216, 0.396078, 0.321569, 1)
theme_override_fonts/normal_font = ExtResource("3_i0d6r")
theme_override_fonts/bold_font = ExtResource("4_wsdh6")
bbcode_enabled = true
text = "Example [wave]Text[/wave]
[wave]Wavy Text[/wave]
[shake]Sakeing [color=orange]text[/color][/shake]"
scroll_active = false

[node name="Label" type="Label" parent="DialogUI"]
layout_mode = 0
offset_left = 102.0
offset_top = 156.0
offset_right = 142.0
offset_bottom = 179.0
theme_override_colors/font_color = Color(0.894118, 0.862745, 0.803922, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("4_wsdh6")
text = "Name"

[node name="PortraitSprite" type="Sprite2D" parent="DialogUI"]
position = Vector2(51, 197)
texture = ExtResource("5_3fxeo")
hframes = 4
script = ExtResource("6_ecukd")

[node name="Timer" type="Timer" parent="DialogUI"]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="DialogUI"]
stream = ExtResource("6_75tmu")
max_polyphony = 6
bus = &"SFX"

[node name="DialogProgressIndicator" type="PanelContainer" parent="DialogUI"]
self_modulate = Color(0.162318, 0.462324, 0.337678, 1)
layout_mode = 0
offset_left = 436.0
offset_top = 248.0
offset_right = 476.0
offset_bottom = 265.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ognxr")

[node name="Label" type="Label" parent="DialogUI/DialogProgressIndicator"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_1emyi")
text = "NEXT
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="DialogUI/DialogProgressIndicator"]
libraries = {
"": SubResource("AnimationLibrary_fsfsl")
}
autoplay = "default"

[connection signal="timeout" from="DialogUI/Timer" to="." method="_on_timer_timeout"]
